--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 before_install:
-  - go get github.com/rakanalh/scheduler
+  - go get github.com/algorythma/go-scheduler
 script:
   # Run the unit tests suite
   - bash ./test.sh
